add yolo5 infrastructure

--- a/web/page/templates/base.html
+++ b/web/page/templates/base.html
@@ -87,6 +87,7 @@
             <li class="list-group-item"><a href="{% url 'suggested_recipes' %}">Vorgeschlagene Rezepte</a></li>
             <li class="list-group-item"><a href="{% url 'classification' %}">Klassifizierung</a></li>
             <li class="list-group-item"><a href="{% url 'folder_list' %}">Trainingsdaten</a></li>
+            <li class="list-group-item"><a href="{% url 'upload_training_image' %}">Trainingsdaten Yolo</a></li>
             <li class="list-group-item"><a href="{% url 'settings_site' %}">Einstellungen</a></li>
         </ul>
     </div>
