--- a/web/page/templates/base.html
+++ b/web/page/templates/base.html
@@ -85,9 +85,11 @@
             </li>
             <li class="list-group-item"><a href="{% url 'recipe_list' %}">Rezepte</a></li>
             <li class="list-group-item"><a href="{% url 'suggested_recipes' %}">Vorgeschlagene Rezepte</a></li>
-            <li class="list-group-item"><a href="{% url 'classification' %}">Klassifizierung</a></li>
-            <li class="list-group-item"><a href="{% url 'folder_list' %}">Trainingsdaten</a></li>
+            <li class="list-group-item"><a href="{% url 'folder_list' %}">Trainingsdaten Klassisch</a></li>  
+            <li class="list-group-item"><a href="{% url 'classification' %}">Trainiere Klassisch</a></li>
             <li class="list-group-item"><a href="{% url 'upload_training_image' %}">Trainingsdaten Yolo</a></li>
+            <li class="list-group-item"><a href="{% url 'train_model' %}">Trainiere Yolo</a></li>
+            <li class="list-group-item"><a href="{% url 'test_detection' %}">Teste Yolo</a></li>
             <li class="list-group-item"><a href="{% url 'settings_site' %}">Einstellungen</a></li>
         </ul>
     </div>
