add annotation feature

--- a/web/page/templates/pages/ingredients_list.html
+++ b/web/page/templates/pages/ingredients_list.html
@@ -194,7 +194,7 @@ function getCookie(name) {
 }
 
 function navigateToAddPage() {
-    window.location.href = 'add/';
+    window.location.href = 'add_detected_editable/';
 }
 
 function filterCards() {
